<resources>
    <string name="app_name">Code Bangladesh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Code Bangladesh</string>
    <string name="nav_header_subtitle">বাংলায় শিখি সবকিছু</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">সেটিংস</string>

    <string name="menu_home">Code Bangladesh</string>
    <string name="menu_tech_companies">তথ্যপ্রযুক্তি কোম্পানির লিস্ট</string>
    <string name="menu_tech_companies_link">https://codebangladesh.org/tech-companies-in-bangladesh</string>
    <string name="menu_provide_suggestion">পরামর্শ দিন (Discord)</string>
    <string name="menu_provide_suggestion_link">https://discord.gg/RsCDspZKqM</string>
    <string name="menu_github">গিটহাব</string>
    <string name="menu_github_link">https://github.com/CodeBangladesh-org</string>
    <string name="menu_web_version">ওয়েব ভার্সন</string>
    <string name="menu_web_version_link">http://codebangladesh.org</string>
    <string name="menu_about_us">আমাদের কথা</string>
    <string name="menu_about_us_link">https://codebangladesh.org/about</string>
    <string name="menu_app_store">রেটিং দিন</string>
    <string name="menu_app_store_link">https://play.google.com/store/apps/details?id=org.codebangladesh</string>
    <string name="appVersion">অ্যাপ ভার্সন</string>
</resources>